# cisco-logger

./: Cargo.toml  README.md
src/: main.rs
systemd/: cisco-logger.service
